open http and https ports in firewall
ensure SSL based access can be properly configured

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,9 +14,14 @@
     name: "ondemand"
     state: present
 
-- name: Open port 80
+- name: Open port http/s
   firewalld:
     service: http
+    permanent: true
+    state: enabled
+
+  firewalld:
+    service: https
     permanent: true
     state: enabled
 
