--- a/ood.yaml
+++ b/ood.yaml
@@ -1,9 +1,4 @@
 ---
 - hosts: ood
   roles:
-    - pre_ohpc
-    - ohpc_install
-    - ohpc_config
-    - compute_build_vnfs
-    - compute_build_nodes
-    - nodes_vivify
+    - ood
