Move http service enabling before the reboot
Make sure http service is enable as part of the base system before
rebooting the node.

Leave node reboot in place for now but this shouln't be necessary
after a provision.  It will only work if the ansible playbook
is run external to the host.  The ansible playbook execution simply
ends when this is run local to the node, as is the case with vagrant
provisioning.

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,6 +14,12 @@
     name: "ondemand"
     state: present
 
+- name: Enable http service
+  systemd:
+    state: started
+    name: httpd24-httpd
+    enabled: yes
+
 - name: Open port http/s
   firewalld:
     service: http
@@ -38,8 +44,3 @@
   local_action: wait_for host={{ inventory_hostname }} state=started port=22 delay=15 timeout=300 connect_timeout=15
   become: false
 
-- name: Make sure a service is running
-  systemd:
-    state: started
-    name: httpd24-httpd
-    enabled: yes
