--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -26,7 +26,7 @@
     permanent: true
     state: enabled
 
-  firewalld:
+-  firewalld:
     service: https
     permanent: true
     state: enabled
