Switch selinux mode to enforcing/permissive
This enables the apps to work without selinux denials

Allows us to learn any required selinux rule exceptions for production deployments

Most importantly it avoids the need to reboot the machine since
the permissive policy can be enabled from state targeted
without a reboot.
This makes it uncessary to reboot the VM after ansible deploy.

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -31,7 +31,10 @@
     permanent: true
     state: enabled
 
-- name: Disable SELinux
+- name: Disable SELinux Enforcement (permissive)
   selinux:
-    state: disabled
+    policy: permissive
+    state: permissive
 
+- name: Set SELinux to permissive mode without reboot
+  command: setenforce 0
