--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,6 +14,14 @@
     name: "ondemand"
     state: present
 
+- name: Stage http authz file for ood
+  copy:
+    src: htpasswd
+    dest: /opt/rh/httpd24/root/etc/httpd/.htpasswd
+    owner: root
+    group: root
+    mode: 0644
+
 - name: Enable http service
   systemd:
     state: started
