--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,6 +14,20 @@
     name: "ondemand"
     state: present
 
+- name: Install dependencies: nfs-utils, ohpc packages, ntp and other required tools.
+  yum: name={{ item }} state=installed update_cache=true
+  with_items:
+    - nfs-utils
+    - https://github.com/openhpc/ohpc/releases/download/v1.3.GA/ohpc-release-1.3-1.el7.x86_64.rpm
+    - ohpc-base-compute
+    - ohpc-slurm-client
+    - ntp
+    - zsh
+    - git
+    - vim
+    - tmux
+    - ruby
+
 - name: Stage http authz file for ood
   copy:
     src: htpasswd
