--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,11 +14,16 @@
     name: "ondemand"
     state: present
 
-- name: Install dependencies: nfs-utils, ohpc packages, ntp and other required tools.
+- name: Install dependencies-nfs-utils, ohpc rpm
   yum: name={{ item }} state=installed update_cache=true
   with_items:
     - nfs-utils
     - https://github.com/openhpc/ohpc/releases/download/v1.3.GA/ohpc-release-1.3-1.el7.x86_64.rpm
+
+
+- name: Install dependencies-ohpc packages, ntp and other required tools.
+  yum: name={{ item }} state=installed update_cache=true
+  with_items:
     - ohpc-base-compute
     - ohpc-slurm-client
     - ntp
@@ -27,6 +32,14 @@
     - vim
     - tmux
     - ruby
+
+- name: Mount /home, /opt/ohpc/pub from OHPC node
+  lineinfile:
+    path: /etc/fstab
+    line: '{{ item }}'
+  with_items:
+    - "{{ headnode_private_ip }}:/home /home nfs nfsvers=3,nodev,nosuid,noatime 0 0"
+    - "{{ headnode_private_ip }}:/opt/ohpc/pub /opt/ohpc/pub nfs nfsvers=3,nodev,noatime 0 0"
 
 - name: Stage http authz file for ood
   copy:
