--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -14,10 +14,8 @@
     name: "ondemand"
     state: present
 
-- name: Install ohpc rpm
-  yum: name={{ item }} state=installed update_cache=true
-  with_items:
-    - https://github.com/openhpc/ohpc/releases/download/v1.3.GA/ohpc-release-1.3-1.el7.x86_64.rpm
+- name: Get OpenHPC repo
+  yum: name={{ openhpc_release_rpm }} state=present update_cache=true
 
 
 - name: Install dependencies-nfs-utils, ohpc packages, ntp and other required tools.
