Got rid of 'include DEPRECATED' warning

--- a/site.yaml
+++ b/site.yaml
@@ -1,4 +1,4 @@
 ---
-- include: ohpc.yaml
-- include: ood.yaml
-- include: compute.yaml
+- import_playbook: ohpc.yaml
+- import_playbook: ood.yaml
+- import_playbook: compute.yaml
