Fixed typo in ohpc.yaml

--- a/ohpc.yaml
+++ b/ohpc.yaml
@@ -2,7 +2,7 @@
 - hosts: ohpc
   roles:
     - { name: 'pre_ohpc', tags: 'pre_ohpc' }
-    - { name: 'ohpc_install', tags: 'ophc_install' }
+    - { name: 'ohpc_install', tags: 'ohpc_install' }
     - { name: 'ohpc_config', tags: 'ohpc_config' }
     - { name: 'compute_build_vnfs', tags: 'compute_build_vnfs' }
     - { name: 'compute_build_nodes', tags: 'compute_build_nodes' }
