REmoving ntp.conf files and tasks related to NTP, as these changes won't be commited in this Pull request

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -24,7 +24,7 @@
     - nfs-utils
     - ohpc-base-compute
     - ohpc-slurm-client
-    - ntp
+    - chrony 
     - zsh
     - git
     - vim
@@ -48,11 +48,6 @@
   template:
     src: cluster.yml
     dest: /etc/ood/config/cluster.d/{{ cluster_name }}.yml
-
-- name: Add ntp configuration files
-  template:
-    src: ntp.conf
-    dest: /ntp.conf
 
 - name: Stage http authz file for ood
   copy:
