Add packages to be install into vnfs
To support vnc on compute node, turbojpg, X Window System and Xfce are needed
tmux, ruby were installed per instruction so included as well

--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -54,6 +54,11 @@
        - ipmitool
        - ohpc-slurm-client
        - ohpc-base-compute
+       - tmux
+       - ruby
+       - turbojpeg
+       - '@X Window System'
+       - '@Xfce'
 
    - name: copy ssh keys over
      copy: src=cluster_root.pub dest={{ compute_chroot_loc }}/root/.ssh/authorized_keys
