--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -100,6 +100,9 @@
    - name: put NFS opt mount info in image
      lineinfile: line="{{ headnode_private_ip }}:/export /export nfs nfsvers=3 0 0" dest={{ compute_chroot_loc }}/etc/fstab state=present
 
+   - name: firewalld on compute image disabled
+     command: chroot '{{ compute_chroot_loc }}' systemctl disable firewalld
+
    - name: chronyd on compute image enabled 
      command: chroot '{{ compute_chroot_loc }}' systemctl enable chronyd
 
