Add warewulf sync harness to ood node
Using warewulf synchronization is the easiest way to get
important files like the slurm.conf, munge.key, and hosts file
onto the ood node in order for it to participate in the cluster, ie.
schedule jobs.

The warewulf harness is added during node provisioning but since
the ood node is not provisioned by warewulf we need to add this
harness manually.  The /warewulf directory and associated cron.d
entry are the key to enabling this synchronization.

Once in place the ood node simply needs to be registered in the ohpc
warewulf db by ethernet address and the registered files will be
copied.

This feature is based on the discussion thread:

https://groups.io/g/OpenHPC-users/topic/27331998#2402

and in particular the process outlined here:

https://groups.io/g/OpenHPC-users/message/2084

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -17,7 +17,6 @@
 - name: Get OpenHPC repo
   yum: name={{ openhpc_release_rpm }} state=present update_cache=true
 
-
 - name: Install dependencies-nfs-utils, ohpc packages, ntp and other required tools.
   yum: name={{ item }} state=installed update_cache=true
   with_items:
@@ -87,3 +86,34 @@
 
 - name: Set SELinux to permissive mode without reboot
   command: setenforce 0
+
+- name: install warewulf file synchronization
+  copy:
+    src: warewulf
+    dest: /
+    owner: root
+    group: root
+
+- name: create custom warewulf config file for node
+  template:
+    src: wwnodeconf.j2
+    dest: /warewulf/config
+    owner: root
+    group: root
+    mode: 0640
+
+- name: add warewulf file sync via cron
+  copy:
+    src: wwupdatefiles
+    dest: /etc/cron.d
+    owner: root
+    group: root
+    mode: 0640
+
+- name: create log output dir for warewulf cron
+  file:
+    path: /var/log/warewulf
+    state: directory
+    owner: root
+    group: root
+    mode: 755
