Fix execute permissions on warewulf scripts

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -94,6 +94,11 @@
     owner: root
     group: root
 
+- file:
+    path: /warewulf/bin
+    recurse: true
+    mode: u+x,g+x
+
 - name: create custom warewulf config file for node
   template:
     src: wwnodeconf.j2
