--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -122,3 +122,20 @@
     owner: root
     group: root
     mode: 755
+
+- name: "RUN THESE COMMAND ON OHPC MASTER TO COMPLETE REGISTRATION"
+  pause:
+    seconds: 1
+
+- name: "sudo wwsh node new ood"
+  pause:
+    seconds: 1
+
+- name: "sudo wwsh node set ood -I {{ ood_ip_addr }} --hwadd {{ hostvars[inventory_hostname].ansible_enp0s8.macaddress }}"
+  pause:
+    seconds: 1
+
+- name: "sudo wwsh provision set ood --files dynamic_hosts,munge.key,slurm.conf"
+  pause:
+    seconds: 180
+
