--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -55,13 +55,6 @@
     group: root
     mode: 0644
 
-- name: start and enable slurmd
-  service: 
-    name: slurmd
-    state: started
-    enabled: yes
-
-
 - name: Enable http service
   systemd:
     state: started
@@ -138,4 +131,19 @@
 - name: "sudo wwsh provision set ood --files dynamic_hosts,munge.key,slurm.conf"
   pause:
     seconds: 180
+
+- name: Force warewulf synchronization
+  shell: /warewulf/bin/wwgetfiles >/var/log/warewulf/wwgetfiles.log 2>&1
+
+- name: start and enable munge
+  service:
+    name: munge
+    state: started
+    enabled: yes
+
+- name: start and enable slurmd
+  service:
+    name: slurmd
+    state: started
+    enabled: yes
 
