Revert "Make use of ansible mount module"
This reverts commit 9b665198de1c28cf8f939f3063911308be7b22ea.

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -30,16 +30,13 @@
     - tmux
     - ruby
 
-- name: mount /home, /opt/ohpc/pub from OHPC node
-  mount:
-    path: "{{ item.path }}"
-    src: "{{ item.src }}"
-    fstype: nfs
-    opts: nfsvers=3,nodev,noatime
-    state: mounted
+- name: Mount /home, /opt/ohpc/pub from OHPC node
+  lineinfile:
+    path: /etc/fstab
+    line: '{{ item }}'
   with_items:
-    - { path: "/home", src: "{{ headnode_private_ip }}:/home" }
-    - { path: "/opt/ohpc/pub", src: "{{ headnode_private_ip }}:/opt/ohpc/pub" }
+    - "{{ headnode_private_ip }}:/home /home nfs nfsvers=3,nodev,nosuid,noatime 0 0"
+    - "{{ headnode_private_ip }}:/opt/ohpc/pub /opt/ohpc/pub nfs nfsvers=3,nodev,noatime 0 0"
 
 - name: Create cluster.d directory
   file:
