--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -64,12 +64,12 @@
    - name: download TurboVNC rpm
      get_url:
        url: https://sourceforge.net/projects/turbovnc/files/2.2/turbovnc-2.2.x86_64.rpm
-       dest: /vagrant/CRI_XCBC/files/turbovnc-2.2.x86_64.rpm
+       dest: /var/tmp/turbovnc-2.2.x86_64.rpm
        checksum: md5:25711ad32bfae63031aff20528d4af79
 
    - name: install TurboVNC via rpm into chroot image
      yum:
-       name: /vagrant/CRI_XCBC/files/turbovnc-2.2.x86_64.rpm
+       name: /var/tmp/turbovnc-2.2.x86_64.rpm
        state: present
        installroot: "{{ compute_chroot_loc }}"
 
@@ -95,11 +95,11 @@
    - name: download Websockify source code
      get_url:
        url: https://github.com/novnc/websockify/archive/v0.8.0.tar.gz
-       dest: /vagrant/CRI_XCBC/files/websockify-0.8.0.tar.gz
+       dest: /var/tmp/websockify-0.8.0.tar.gz
 
    - name: extract Websockify source code into chroot env
      unarchive:
-       src: /vagrant/CRI_XCBC/files/websockify-0.8.0.tar.gz
+       src: /var/tmp/websockify-0.8.0.tar.gz
        dest: '{{ compute_chroot_loc }}/tmp'
 
    - name: install Websockify inside chroot env
