--- a/ohpc.yaml
+++ b/ohpc.yaml
@@ -9,4 +9,5 @@
     - { name: 'nodes_vivify', tags: 'nodes_vivify' }
     - { name: 'ohpc_add_easybuild', tags: 'ohpc_add_easybuild' }
     - { name: 'ohpc_jupyter', tags: 'ohpc_jupyter', when: jupyter_provision}
+    - { name: 'ohpc_matlab', tags: 'ohpc_matlab', when: matlab_provision }
     - { name: 'ohpc_add_rstudio', tags: 'ohpc_add_rstudio', when: rstudio_provision }
