--- a/ood.yaml
+++ b/ood.yaml
@@ -7,6 +7,7 @@
     - { name: 'ood_jupyter', tags: 'ood_jupyter', when: jupyter_provision}
     - { name: 'ood_vnc_form', tags: 'ood_vnc_form' }
     - { name: 'ood_add_rstudio', tags: 'ood_add_rstudio', when: rstudio_provision }
+    - { name: 'ood_matlab', when: matlab_provision, tags: 'ood_matlab' }
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
     - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
     - { name: 'ood_shib_sso', tags: 'ood_shib_sso', when: enable_shib }
