--- a/ood.yaml
+++ b/ood.yaml
@@ -5,3 +5,4 @@
     - { name: 'ood', tags: 'ood' }
     - { name: 'warewulf_sync', tags: 'warewulf_sync' }
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
+    - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
