Move submit.yml from templates to files
Also modify task/main.yaml since it's not template anymore

--- a/roles/ood_add_rstudio/tasks/main.yaml
+++ b/roles/ood_add_rstudio/tasks/main.yaml
@@ -11,6 +11,6 @@
     dest: /var/www/ood/apps/sys/bc_rstudio_server/form.yml
 
 - name: Replace form submission template
-  template:
+  copy:
     src: submit.yml
     dest: /var/www/ood/apps/sys/bc_rstudio_server/submit.yml.erb
