--- a/roles/ood/templates/cluster.yml
+++ b/roles/ood/templates/cluster.yml
@@ -12,12 +12,12 @@ v2:
       script_wrapper: |
         module purge
         %s
-      set_host: "host=$(hostname -A | awk '{print $1}')"
+      set_host: "host=$(hostname -s)"
     vnc:
       script_wrapper: |
         module purge
         export PATH="/opt/TurboVNC/bin:$PATH"
         export WEBSOCKIFY_CMD="/bin/websockify"
         %s
-      set_host: "host=$(hostname -A | awk '{print $1}')"
+      set_host: "host=$(hostname -s)"
 
