Update hostname used by reverse proxy
Since we change to shortest hostname, without .localdomain suffix
  change the reverse proxy to match that change.

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -49,7 +49,7 @@
     path: /etc/ood/config/ood_portal.yml
     line: '{{ item }}'
   with_items:
-    - "host_regex: '{{ compute_node_glob }}.localdomain'"
+    - "host_regex: '{{ compute_node_glob }}'"
     - "node_uri: '/node'"
     - "rnode_uri: '/rnode'"
 
