--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 
-   - name: install OpenHPC base, warewulf, and slurm server
+   - name: install OpenHPC base, warewulf, slurm server, and compiler packages
      yum: name={{ item }} state=latest
      with_items:
        - "ohpc-base"
        - "ohpc-warewulf"
        - "ohpc-slurm-server"
+       - "lmod-defaults-gnu-openmpi-ohpc"
+       - "openmpi-gnu-ohpc"
+       - "gnu-compilers-ohpc"
 
    - name: yum update
      yum: name=* state=latest update_cache=yes
