--- a/roles/ohpc_slurm_17_11_11/tasks/main.yml
+++ b/roles/ohpc_slurm_17_11_11/tasks/main.yml
@@ -6,6 +6,6 @@
   - name: Extract Slurm 17.11.11 RPMs
     unarchive:
         #src: "{{ slurm_17_11_11_dest }}/unbuz2ceuhfbeysqg5d7knhc6qn99p4z.zip"
-      src: {{ slurm_17_11_11_url }}
-      dest: {{ slurm_17_11_11_dest }}
+      src: "{{ slurm_17_11_11_url }}"
+      dest: "{{ slurm_17_11_11_dest }}"
       remote_src: yes
