--- a/roles/ohpc_config/tasks/main.yml
+++ b/roles/ohpc_config/tasks/main.yml
@@ -13,18 +13,11 @@
 #       setype: httpd_sys_content_t
 #       state: present
 
-#No need for this in OHPC-1.3.3
-#   - name: config warewulf http
-#     lineinfile: 
-#       dest: /etc/httpd/conf.d/warewulf-httpd.conf
-#       regexp: "{{ item.regex }}" 
-#       line: "{{ item.line }}" 
-#       state: "{{ item.state }}"
-#       backrefs: yes
-#     with_items:
-#       - { regex: '^(.*)cgi-bin>$', line: '\1cgi-bin> \n    Require all granted', state: present}
-#       - { regex: '(\s+)Allow from all', line: '\1Require all granted', state: present }
-#       - { regex: 'Order allow,deny', line: "", state: absent }
+#For compatibility with OpenXDMoD (use name-based vhost on the private ip only)
+   - name: config warewulf http
+     template: 
+       source: warewulf-httpd.conf.j2
+       dest: /etc/httpd/conf.d/warewulf-httpd.conf
      
    - name: reload xinetd
      service: name=xinetd state=restarted
