--- a/roles/ohpc_slurm_17_11_11/tasks/main.yml
+++ b/roles/ohpc_slurm_17_11_11/tasks/main.yml
@@ -14,3 +14,17 @@
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-perlapi-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmctld-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmdbd-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+
+  - name: Update slurm related packages on compute node
+    yum:
+      installroot: "{{ compute_chroot_loc }}"
+      name:
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-contribs-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-example-configs-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-pam_slurm-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-perlapi-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+        - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmd-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+
+  - name: Rebuild compute node vnfs image
+    command: wwvnfs -y --chroot "{{ compute_chroot_loc }}/"
