--- a/roles/ohpc_slurm_17_11_11/tasks/main.yml
+++ b/roles/ohpc_slurm_17_11_11/tasks/main.yml
@@ -14,6 +14,7 @@
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-perlapi-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmctld-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmdbd-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+    when: inventory_hostname == cluster_name
 
   - name: Update slurm related packages for compute node image
     yum:
@@ -25,6 +26,8 @@
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-pam_slurm-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-perlapi-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
         - "{{ slurm_17_11_11_dest }}/slurm17.11.11/slurm-slurmd-ohpc-17.11.11-6.2.ohpc.1.3.6.x86_64.rpm"
+    when: inventory_hostname == cluster_name
 
   - name: Rebuild compute node vnfs image
     command: wwvnfs -y --chroot "{{ compute_chroot_loc }}/"
+    when: inventory_hostname == cluster_name
