--- a/roles/prep_ood/tasks/main.yaml
+++ b/roles/prep_ood/tasks/main.yaml
@@ -6,6 +6,11 @@
   yum: name=yum-plugin-copr state=present update_cache=true
   when: enable_copr == true
 
+- name: enable Copr Repos
+  shell: yum -y copr enable "{{ item.repo_name }}"
+  with_items: "{{ copr_repos }}"
+  when: enable_copr == true and inventory_hostname in item.host
+
 - name: Install dependencies-nfs-utils, ohpc packages, ntp and other required tools.
   yum: name={{ item }} state=installed update_cache=true
   with_items:
