--- a/ood.yaml
+++ b/ood.yaml
@@ -4,5 +4,6 @@
     - { name: 'prep_ood', tags: 'prep_ood' }
     - { name: 'ood', tags: 'ood' }
     - { name: 'warewulf_sync', tags: 'warewulf_sync' }
+    - { name: 'ood_jupyter', when: jupyter_provision == true, tags: 'ood_jupyter'}
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
     - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
