Uninstall slurmd on ood node
Since we do not need slurmd running for just submit job
 remove ohpc-slurm-client and install only slurm-ohpc is enough

NOTE: it does not install slurm-pam_slurm-ohpc which is fine for now

--- a/roles/prep_ood/tasks/main.yaml
+++ b/roles/prep_ood/tasks/main.yaml
@@ -16,7 +16,7 @@
   with_items:
     - nfs-utils
     - ohpc-base-compute
-    - ohpc-slurm-client
+    - slurm-ohpc
     - zsh
     - git
     - vim
