--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -3,6 +3,13 @@
   yum:
     name: "centos-release-scl"
     state: present
+  when: ansible_distribution == "CentOS"
+
+- name: Enable the Software Collections repository on RHEL 7
+  rhsm_repository:
+    name: rhel-server-rhscl-7-rpms
+    state: enabled
+  when: ansible_distribution == "RedHat" and ansible_distribution_major_version == '7'
 
 - name: Add Open OnDemand’s repository hosted by the Ohio Supercomputer Center
   yum:
