--- a/roles/ood_jupyter/tasks/main.yml
+++ b/roles/ood_jupyter/tasks/main.yml
@@ -20,3 +20,8 @@
   copy:
     src: jupyter-submit.yml.erb
     dest: /var/www/ood/apps/sys/jupyter/submit.yml.erb
+
+- name: Use custom script.sh.erb provided to avoid Jupyter Crash with user id!=1000
+  copy:
+    src: jupyter-script.sh.erb
+    dest: /var/www/ood/apps/sys/jupyter/script.sh.erb
