--- a/ohpc.yaml
+++ b/ohpc.yaml
@@ -8,3 +8,4 @@
     - { name: 'compute_build_nodes', tags: 'compute_build_nodes' }
     - { name: 'nodes_vivify', tags: 'nodes_vivify' }
     - { name: 'ohpc_add_easybuild', tags: 'ohpc_add_easybuild' }
+    - { name: 'ohpc_jupyter', when: jupyter_provision == true, tags: 'ohpc_jupyter'}
