Add code to install nb_conda_kernels to manage jupyter kernels.

--- a/roles/ohpc_jupyter/tasks/main.yml
+++ b/roles/ohpc_jupyter/tasks/main.yml
@@ -8,3 +8,13 @@
   become_user: build
   args:
     executable: /bin/bash
+
+- name: Install nb_conda_kernels to manage jupyter kernels
+  shell : |
+    source /etc/profile.d/lmod.sh
+    export EASYBUILD_PREFIX={{ easybuild_prefix }}
+    module load Anaconda3
+    conda install -y nb_conda_kernels
+  become_user: root
+  args:
+    executable: /bin/bash
