--- a/roles/compute_build_nodes/tasks/main.yml
+++ b/roles/compute_build_nodes/tasks/main.yml
@@ -64,9 +64,13 @@
   
      when: node_inventory_auto == false
 
-   - name: add nodes via wwnodescan - BOOT NODES NOW, IN ORDER
+   - name: add nodes via wwnodescan, no NAT - BOOT NODES NOW, IN ORDER
      shell: wwnodescan --ip={{ compute_ip_minimum }} --netdev={{ private_interface }} --netmask=255.255.255.0 --bootstrap={{ build_kernel_ver }} --vnfs={{ compute_chroot }} {{ node_glob_bash }}
-     when: node_inventory_auto == true
+     when: node_inventory_auto == true and enable_compute_NAT != true
+
+   - name: add nodes via wwnodescan, NAT enabled - BOOT NODES NOW, IN ORDER
+     shell: wwnodescan --ip={{ compute_ip_minimum }} --netdev={{ private_interface }} --netmask=255.255.255.0 --bootstrap={{ build_kernel_ver }} --vnfs={{ compute_chroot }} {{ node_glob_bash }}
+     when: node_inventory_auto == true and enable_compute_NAT == true
 
    - name: set files to provision
      command: wwsh -y provision set {{ compute_node_glob }} --vnfs={{ compute_chroot }} --bootstrap={{ build_kernel_ver }} --files=passwd,group,shadow,munge.key,slurm.conf,dynamic_hosts,network
