Add shibboleth SSO authn role and configuration for samltest.id (#56)
Add shibboleth SSO authn role and configuration for samltest.id

This adds a role to enable shibboleth SSO authn for ood. It includes
a stock Shibboleth SP configuration for testing against the
https://samltest.id Shibboleth IdP. The stock IdP accounts are mapped
to the stock dev account (vagrant).

* groups_vars/all: enable copr repo for scl shib rpm, shib enable flag
* ood.yaml: optional role ood_shib_sso for shib sso
* tasks/main.yml: tasks for shib enabling and configuration
* files/shibboleth2.xml: configuration for testsaml.id federation
* files/ood-user-mapfile: account mapping for upstream IdP accounts

--- a/ood.yaml
+++ b/ood.yaml
@@ -6,3 +6,4 @@
     - { name: 'warewulf_sync', tags: 'warewulf_sync' }
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
     - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
+    - { name: 'ood_shib_sso', tags: 'ood_shib_sso', when: enable_shib }
