--- a/roles/ood_jupyter/templates/custom-jupyter-form.yml
+++ b/roles/ood_jupyter/templates/custom-jupyter-form.yml
@@ -16,7 +16,7 @@ title: "Jupyter Notebook"
 # Description of the app displayed in the Dashboard (can use multi-line string
 # and Markdown syntax)
 description: |
-  This app will launch a Jupyter Notebook server on one or more nodes.
+  This app will launch a Jupyter Notebook server on one or more cores.
 
 # Define attribute values that aren't meant to be modified by the user within
 # the Dashboard form
