--- a/roles/ood_jupyter/templates/custom-jupyter-form.yml
+++ b/roles/ood_jupyter/templates/custom-jupyter-form.yml
@@ -56,6 +56,27 @@ attributes:
   # command that launches the Jupyter notebook within the batch job
   extra_jupyter_args: ""
 
+  bc_num_slots:
+    label: Number of CPU
+    value: 1
+    min: 1
+    max: 24
+    step: 1
+
+  bc_num_mems:
+    widget: "number_field"
+    label: Memory per CPU
+    value: 4
+    min: 1
+    max: 128
+    step: 1
+
+  bc_partition:
+    widget: select
+    label: Partition
+    options:
+      - [ "low", "low" ]
+
 # All of the attributes that make up the Dashboard form (in respective order),
 # and made available to the submit configuration file and the template ERB
 # files
@@ -67,5 +88,7 @@ attributes:
 #   Dashboard
 form:
   - conda_extensions
+  - bc_partition
   - bc_num_slots
+  - bc_num_mems
   - bc_email_on_started
