Add custom environment back
Keeping hardcoded module load Anaconda3
 jupyter need Anaconda to be loaded in order to work

--- a/roles/ood_jupyter/templates/custom-jupyter-form.yml
+++ b/roles/ood_jupyter/templates/custom-jupyter-form.yml
@@ -87,6 +87,7 @@ attributes:
 #   option, then it will not appear in the form page that the user sees in the
 #   Dashboard
 form:
+  - custom_environment
   - conda_extensions
   - bc_partition
   - bc_num_slots
