Update placeholder message in Environment setup
Remove module load Anaconda3 which we already hardcoded in script
 add more explanation for the purpose of this block.

--- a/roles/ood_jupyter/templates/custom-jupyter-form.yml
+++ b/roles/ood_jupyter/templates/custom-jupyter-form.yml
@@ -37,8 +37,12 @@ attributes:
     widget: text_area
     label: Environment Setup
     value: |
-      # Load required modules
-      module load Anaconda3
+      # By default, it already load latest version of Anaconda3
+      # If you would like to load other modules
+      # or use specific version of Anaconda please list below
+      #
+      # format:
+      # module load example_module/VERSION example_module2
 
   # Whether Conda extensions will be available within the Jupyter notebook
   # server
