Remove innodb log file
After install mariadb, it starts and create two innodb log files
Since we are going to change innodb log file size
 it will complain about log file size is different
Simply remove the innodb log files can fix it

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -45,6 +45,13 @@
        line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
        state: present
 
+   - name: Remove innodb log file
+     file:
+       path: "{{ item }}"
+       state: absent
+     with_items:
+       - /var/lib/mysql/ib_logfile0
+       - /var/lib/mysql/ib_logfile1
  
    - name: initialize slurmdb databases
      mysql_db:
