Disable slurmdbd log file creatation task

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -26,8 +26,8 @@
    - name: set the gres.conf on the master
      copy: src=gres.conf dest=/etc/slurm/gres.conf
 
-   - name: create the slurmdbd log file
-     file: path=/var/log/slurmdbd.log state=touch owner=slurm group=slurm
+#   - name: create the slurmdbd log file
+#     file: path=/var/log/slurmdbd.log state=touch owner=slurm group=slurm
 
    - name: insert rhel-xcbc WW template
      copy: src=include-rhel-xcbc dest="{{ template_path }}include-rhel-xcbc"
