extract matlab using unarchive module over extract, to remove warning messages

--- a/roles/ohpc_matlab/tasks/main.yaml
+++ b/roles/ohpc_matlab/tasks/main.yaml
@@ -8,5 +8,7 @@
     url: "{{ matlab_download_url }}"
     dest: "{{ matlab_destination  }}"
 
-- name: Un-tar downloaded MATLAB 
-  command: tar -xvf {{ matlab_destination  }} -C "{{ matlab_clustershare }}"
+- name: Extract matlab
+  unarchive:
+    src: "{{ matlab_destination  }}"
+    dest: "{{ matlab_clustershare }}"
