Update the "update slurm status on nodes" section
Modifies syntax of command to fix minor error

--- a/roles/nodes_vivify/tasks/main.yml
+++ b/roles/nodes_vivify/tasks/main.yml
@@ -22,7 +22,7 @@
      shell: pdsh -w $(wwsh node list | tail --lines=+3 | cut -f 1 -d' '| tr '\n' ',') systemctl enable slurmd
 
    - name: update slurm status on nodes
-     shell: scontrol update nodename=$(wwsh node list | tail --lines=+3 | cut -f 1 -d' '| tr '\n' ',') state=IDLE
+     shell: scontrol update NodeName=$(wwsh node list | tail --lines=+3 | cut -f 1 -d' '| tr '\n' ',') state=IDLE
 
    - name: update pxeconfig to let node boot locally
      shell: wwsh -y object modify -s bootlocal=EXIT -t node $(wwsh node list | tail --lines=+3 | cut -f 1 -d' '| tr '\n' ' ') 
