added matlab install instructions as comments

--- a/roles/ohpc_matlab/tasks/main.yaml
+++ b/roles/ohpc_matlab/tasks/main.yaml
@@ -19,6 +19,18 @@
     src: "{{ matlab_destination  }}"
     dest: "{{ matlab_clustershare }}"
 
+#- name: "REGISTER MATLAB ON www.mathworks.com"
+#  pause:
+#    seconds: 1
+#
+#- name: "mathworks login -> license center -> install and activate -> activate to retrive license -> activate a computer"
+#  pause:
+#    seconds: 1
+#
+#- name: "enter the host ID and computer login name (vagrant in our case) "
+#  pause:
+#    seconds: 1
+
 - name: Create directory
   file:
     path: "{{ matlab_module_dir }}"
